metadatafullcopy/unpackaged/objects/Scheduler_Filter_Form__c.object
<CustomObject>
    <description>DO NOT USE.  This object is designed to assist in the creation of fields which show when a user is attempting to filter data on the Scheduler page</description>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catastrophe</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Bio</fullName>
                </value>
                <value>
                    <fullName>E.S.</fullName>
                </value>
                <value>
                    <fullName>Contents</fullName>
                </value>
                <value>
                    <fullName>Microbial</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OfficePicklist__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anaheim</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Riverside</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Tuscon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Scheduler Filter Form</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Scheduler Filter Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Filter Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>